parser/SvgPathParser.js
// Generated from parser/SvgPath.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SvgPathListener = require('./SvgPathListener').SvgPathListener;
var SvgPathVisitor = require('./SvgPathVisitor').SvgPathVisitor;

var grammarFileName = "SvgPath.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'M'", "'m'", "'Z'", "'z'", "'L'", "'l'", "'H'", 
                     "'h'", "'V'", "'v'", "'C'", "'c'", "'S'", "'s'", "'Q'", 
                     "'q'", "'T'", "'t'", "'A'", "'a'", "'0'", "'1'", "','", 
                     "'.'", "'e'", "'E'", "'+'", "'-'", "'2'", "'3'", "'4'", 
                     "'5'", "'6'", "'7'", "'8'", "'9'", "' '", "'\t'", "'\r'", 
                     "'\n'" ];

var symbolicNames = [  ];

var ruleNames =  [ "eval", "svgPath", "movetoDrawtoCommandGroups", "movetoDrawtoCommandGroup", 
                   "drawtoCommands", "drawtoCommand", "moveto", "movetoArgumentSequence", 
                   "closepath", "lineto", "linetoArgumentSequence", "horizontalLineto", 
                   "horizontalLinetoArgumentSequence", "verticalLineto", 
                   "verticalLinetoArgumentSequence", "curveto", "curvetoArgumentSequence", 
                   "curvetoArgument", "smoothCurveto", "smoothCurvetoArgumentSequence", 
                   "smoothCurvetoArgument", "quadraticBezierCurveto", "quadraticBezierCurvetoArgumentSequence", 
                   "quadraticBezierCurvetoArgument", "smoothQuadraticBezierCurveto", 
                   "smoothQuadraticBezierCurvetoArgumentSequence", "ellipticalArc", 
                   "ellipticalArcArgumentSequence", "ellipticalArcArgument", 
                   "coordinatePair", "coordinate", "nonnegativeNumber", 
                   "number", "flag", "commaWsp", "comma", "integerConstant", 
                   "floatingPointConstant", "fractionalConstant", "exponent", 
                   "sign", "digitSequence", "digit", "wsp" ];

function SvgPathParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SvgPathParser.prototype = Object.create(antlr4.Parser.prototype);
SvgPathParser.prototype.constructor = SvgPathParser;

Object.defineProperty(SvgPathParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SvgPathParser.EOF = antlr4.Token.EOF;
SvgPathParser.T__0 = 1;
SvgPathParser.T__1 = 2;
SvgPathParser.T__2 = 3;
SvgPathParser.T__3 = 4;
SvgPathParser.T__4 = 5;
SvgPathParser.T__5 = 6;
SvgPathParser.T__6 = 7;
SvgPathParser.T__7 = 8;
SvgPathParser.T__8 = 9;
SvgPathParser.T__9 = 10;
SvgPathParser.T__10 = 11;
SvgPathParser.T__11 = 12;
SvgPathParser.T__12 = 13;
SvgPathParser.T__13 = 14;
SvgPathParser.T__14 = 15;
SvgPathParser.T__15 = 16;
SvgPathParser.T__16 = 17;
SvgPathParser.T__17 = 18;
SvgPathParser.T__18 = 19;
SvgPathParser.T__19 = 20;
SvgPathParser.T__20 = 21;
SvgPathParser.T__21 = 22;
SvgPathParser.T__22 = 23;
SvgPathParser.T__23 = 24;
SvgPathParser.T__24 = 25;
SvgPathParser.T__25 = 26;
SvgPathParser.T__26 = 27;
SvgPathParser.T__27 = 28;
SvgPathParser.T__28 = 29;
SvgPathParser.T__29 = 30;
SvgPathParser.T__30 = 31;
SvgPathParser.T__31 = 32;
SvgPathParser.T__32 = 33;
SvgPathParser.T__33 = 34;
SvgPathParser.T__34 = 35;
SvgPathParser.T__35 = 36;
SvgPathParser.T__36 = 37;
SvgPathParser.T__37 = 38;
SvgPathParser.T__38 = 39;
SvgPathParser.T__39 = 40;

SvgPathParser.RULE_eval = 0;
SvgPathParser.RULE_svgPath = 1;
SvgPathParser.RULE_movetoDrawtoCommandGroups = 2;
SvgPathParser.RULE_movetoDrawtoCommandGroup = 3;
SvgPathParser.RULE_drawtoCommands = 4;
SvgPathParser.RULE_drawtoCommand = 5;
SvgPathParser.RULE_moveto = 6;
SvgPathParser.RULE_movetoArgumentSequence = 7;
SvgPathParser.RULE_closepath = 8;
SvgPathParser.RULE_lineto = 9;
SvgPathParser.RULE_linetoArgumentSequence = 10;
SvgPathParser.RULE_horizontalLineto = 11;
SvgPathParser.RULE_horizontalLinetoArgumentSequence = 12;
SvgPathParser.RULE_verticalLineto = 13;
SvgPathParser.RULE_verticalLinetoArgumentSequence = 14;
SvgPathParser.RULE_curveto = 15;
SvgPathParser.RULE_curvetoArgumentSequence = 16;
SvgPathParser.RULE_curvetoArgument = 17;
SvgPathParser.RULE_smoothCurveto = 18;
SvgPathParser.RULE_smoothCurvetoArgumentSequence = 19;
SvgPathParser.RULE_smoothCurvetoArgument = 20;
SvgPathParser.RULE_quadraticBezierCurveto = 21;
SvgPathParser.RULE_quadraticBezierCurvetoArgumentSequence = 22;
SvgPathParser.RULE_quadraticBezierCurvetoArgument = 23;
SvgPathParser.RULE_smoothQuadraticBezierCurveto = 24;
SvgPathParser.RULE_smoothQuadraticBezierCurvetoArgumentSequence = 25;
SvgPathParser.RULE_ellipticalArc = 26;
SvgPathParser.RULE_ellipticalArcArgumentSequence = 27;
SvgPathParser.RULE_ellipticalArcArgument = 28;
SvgPathParser.RULE_coordinatePair = 29;
SvgPathParser.RULE_coordinate = 30;
SvgPathParser.RULE_nonnegativeNumber = 31;
SvgPathParser.RULE_number = 32;
SvgPathParser.RULE_flag = 33;
SvgPathParser.RULE_commaWsp = 34;
SvgPathParser.RULE_comma = 35;
SvgPathParser.RULE_integerConstant = 36;
SvgPathParser.RULE_floatingPointConstant = 37;
SvgPathParser.RULE_fractionalConstant = 38;
SvgPathParser.RULE_exponent = 39;
SvgPathParser.RULE_sign = 40;
SvgPathParser.RULE_digitSequence = 41;
SvgPathParser.RULE_digit = 42;
SvgPathParser.RULE_wsp = 43;


function EvalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_eval;
    return this;
}

EvalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EvalContext.prototype.constructor = EvalContext;

EvalContext.prototype.svgPath = function() {
    return this.getTypedRuleContext(SvgPathContext,0);
};

EvalContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterEval(this);
	}
};

EvalContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitEval(this);
	}
};

EvalContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitEval(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.EvalContext = EvalContext;

SvgPathParser.prototype.eval = function() {

    var localctx = new EvalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SvgPathParser.RULE_eval);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 88;
        this.svgPath();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SvgPathContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_svgPath;
    return this;
}

SvgPathContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SvgPathContext.prototype.constructor = SvgPathContext;

SvgPathContext.prototype.wsp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WspContext);
    } else {
        return this.getTypedRuleContext(WspContext,i);
    }
};

SvgPathContext.prototype.movetoDrawtoCommandGroups = function() {
    return this.getTypedRuleContext(MovetoDrawtoCommandGroupsContext,0);
};

SvgPathContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterSvgPath(this);
	}
};

SvgPathContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitSvgPath(this);
	}
};

SvgPathContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitSvgPath(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.SvgPathContext = SvgPathContext;

SvgPathParser.prototype.svgPath = function() {

    var localctx = new SvgPathContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SvgPathParser.RULE_svgPath);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 90;
                this.wsp(); 
            }
            this.state = 95;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SvgPathParser.T__0 || _la===SvgPathParser.T__1) {
            this.state = 96;
            this.movetoDrawtoCommandGroups();
        }

        this.state = 102;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (SvgPathParser.T__36 - 37)) | (1 << (SvgPathParser.T__37 - 37)) | (1 << (SvgPathParser.T__38 - 37)) | (1 << (SvgPathParser.T__39 - 37)))) !== 0)) {
            this.state = 99;
            this.wsp();
            this.state = 104;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MovetoDrawtoCommandGroupsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_movetoDrawtoCommandGroups;
    return this;
}

MovetoDrawtoCommandGroupsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MovetoDrawtoCommandGroupsContext.prototype.constructor = MovetoDrawtoCommandGroupsContext;

MovetoDrawtoCommandGroupsContext.prototype.movetoDrawtoCommandGroup = function() {
    return this.getTypedRuleContext(MovetoDrawtoCommandGroupContext,0);
};

MovetoDrawtoCommandGroupsContext.prototype.movetoDrawtoCommandGroups = function() {
    return this.getTypedRuleContext(MovetoDrawtoCommandGroupsContext,0);
};

MovetoDrawtoCommandGroupsContext.prototype.wsp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WspContext);
    } else {
        return this.getTypedRuleContext(WspContext,i);
    }
};

MovetoDrawtoCommandGroupsContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterMovetoDrawtoCommandGroups(this);
	}
};

MovetoDrawtoCommandGroupsContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitMovetoDrawtoCommandGroups(this);
	}
};

MovetoDrawtoCommandGroupsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitMovetoDrawtoCommandGroups(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.MovetoDrawtoCommandGroupsContext = MovetoDrawtoCommandGroupsContext;

SvgPathParser.prototype.movetoDrawtoCommandGroups = function() {

    var localctx = new MovetoDrawtoCommandGroupsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SvgPathParser.RULE_movetoDrawtoCommandGroups);
    var _la = 0; // Token type
    try {
        this.state = 115;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 105;
            this.movetoDrawtoCommandGroup();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 106;
            this.movetoDrawtoCommandGroup();
            this.state = 110;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (SvgPathParser.T__36 - 37)) | (1 << (SvgPathParser.T__37 - 37)) | (1 << (SvgPathParser.T__38 - 37)) | (1 << (SvgPathParser.T__39 - 37)))) !== 0)) {
                this.state = 107;
                this.wsp();
                this.state = 112;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 113;
            this.movetoDrawtoCommandGroups();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MovetoDrawtoCommandGroupContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_movetoDrawtoCommandGroup;
    return this;
}

MovetoDrawtoCommandGroupContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MovetoDrawtoCommandGroupContext.prototype.constructor = MovetoDrawtoCommandGroupContext;

MovetoDrawtoCommandGroupContext.prototype.moveto = function() {
    return this.getTypedRuleContext(MovetoContext,0);
};

MovetoDrawtoCommandGroupContext.prototype.wsp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WspContext);
    } else {
        return this.getTypedRuleContext(WspContext,i);
    }
};

MovetoDrawtoCommandGroupContext.prototype.drawtoCommands = function() {
    return this.getTypedRuleContext(DrawtoCommandsContext,0);
};

MovetoDrawtoCommandGroupContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterMovetoDrawtoCommandGroup(this);
	}
};

MovetoDrawtoCommandGroupContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitMovetoDrawtoCommandGroup(this);
	}
};

MovetoDrawtoCommandGroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitMovetoDrawtoCommandGroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.MovetoDrawtoCommandGroupContext = MovetoDrawtoCommandGroupContext;

SvgPathParser.prototype.movetoDrawtoCommandGroup = function() {

    var localctx = new MovetoDrawtoCommandGroupContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SvgPathParser.RULE_movetoDrawtoCommandGroup);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this.moveto();
        this.state = 121;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 118;
                this.wsp(); 
            }
            this.state = 123;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
        }

        this.state = 125;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SvgPathParser.T__2) | (1 << SvgPathParser.T__3) | (1 << SvgPathParser.T__4) | (1 << SvgPathParser.T__5) | (1 << SvgPathParser.T__6) | (1 << SvgPathParser.T__7) | (1 << SvgPathParser.T__8) | (1 << SvgPathParser.T__9) | (1 << SvgPathParser.T__10) | (1 << SvgPathParser.T__11) | (1 << SvgPathParser.T__12) | (1 << SvgPathParser.T__13) | (1 << SvgPathParser.T__14) | (1 << SvgPathParser.T__15) | (1 << SvgPathParser.T__16) | (1 << SvgPathParser.T__17) | (1 << SvgPathParser.T__18) | (1 << SvgPathParser.T__19))) !== 0)) {
            this.state = 124;
            this.drawtoCommands();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DrawtoCommandsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_drawtoCommands;
    return this;
}

DrawtoCommandsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DrawtoCommandsContext.prototype.constructor = DrawtoCommandsContext;

DrawtoCommandsContext.prototype.drawtoCommand = function() {
    return this.getTypedRuleContext(DrawtoCommandContext,0);
};

DrawtoCommandsContext.prototype.drawtoCommands = function() {
    return this.getTypedRuleContext(DrawtoCommandsContext,0);
};

DrawtoCommandsContext.prototype.wsp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WspContext);
    } else {
        return this.getTypedRuleContext(WspContext,i);
    }
};

DrawtoCommandsContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterDrawtoCommands(this);
	}
};

DrawtoCommandsContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitDrawtoCommands(this);
	}
};

DrawtoCommandsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitDrawtoCommands(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.DrawtoCommandsContext = DrawtoCommandsContext;

SvgPathParser.prototype.drawtoCommands = function() {

    var localctx = new DrawtoCommandsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SvgPathParser.RULE_drawtoCommands);
    var _la = 0; // Token type
    try {
        this.state = 137;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 127;
            this.drawtoCommand();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 128;
            this.drawtoCommand();
            this.state = 132;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (SvgPathParser.T__36 - 37)) | (1 << (SvgPathParser.T__37 - 37)) | (1 << (SvgPathParser.T__38 - 37)) | (1 << (SvgPathParser.T__39 - 37)))) !== 0)) {
                this.state = 129;
                this.wsp();
                this.state = 134;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 135;
            this.drawtoCommands();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DrawtoCommandContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_drawtoCommand;
    return this;
}

DrawtoCommandContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DrawtoCommandContext.prototype.constructor = DrawtoCommandContext;

DrawtoCommandContext.prototype.closepath = function() {
    return this.getTypedRuleContext(ClosepathContext,0);
};

DrawtoCommandContext.prototype.lineto = function() {
    return this.getTypedRuleContext(LinetoContext,0);
};

DrawtoCommandContext.prototype.horizontalLineto = function() {
    return this.getTypedRuleContext(HorizontalLinetoContext,0);
};

DrawtoCommandContext.prototype.verticalLineto = function() {
    return this.getTypedRuleContext(VerticalLinetoContext,0);
};

DrawtoCommandContext.prototype.curveto = function() {
    return this.getTypedRuleContext(CurvetoContext,0);
};

DrawtoCommandContext.prototype.smoothCurveto = function() {
    return this.getTypedRuleContext(SmoothCurvetoContext,0);
};

DrawtoCommandContext.prototype.quadraticBezierCurveto = function() {
    return this.getTypedRuleContext(QuadraticBezierCurvetoContext,0);
};

DrawtoCommandContext.prototype.smoothQuadraticBezierCurveto = function() {
    return this.getTypedRuleContext(SmoothQuadraticBezierCurvetoContext,0);
};

DrawtoCommandContext.prototype.ellipticalArc = function() {
    return this.getTypedRuleContext(EllipticalArcContext,0);
};

DrawtoCommandContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterDrawtoCommand(this);
	}
};

DrawtoCommandContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitDrawtoCommand(this);
	}
};

DrawtoCommandContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitDrawtoCommand(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.DrawtoCommandContext = DrawtoCommandContext;

SvgPathParser.prototype.drawtoCommand = function() {

    var localctx = new DrawtoCommandContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, SvgPathParser.RULE_drawtoCommand);
    try {
        this.state = 148;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SvgPathParser.T__2:
        case SvgPathParser.T__3:
            this.enterOuterAlt(localctx, 1);
            this.state = 139;
            this.closepath();
            break;
        case SvgPathParser.T__4:
        case SvgPathParser.T__5:
            this.enterOuterAlt(localctx, 2);
            this.state = 140;
            this.lineto();
            break;
        case SvgPathParser.T__6:
        case SvgPathParser.T__7:
            this.enterOuterAlt(localctx, 3);
            this.state = 141;
            this.horizontalLineto();
            break;
        case SvgPathParser.T__8:
        case SvgPathParser.T__9:
            this.enterOuterAlt(localctx, 4);
            this.state = 142;
            this.verticalLineto();
            break;
        case SvgPathParser.T__10:
        case SvgPathParser.T__11:
            this.enterOuterAlt(localctx, 5);
            this.state = 143;
            this.curveto();
            break;
        case SvgPathParser.T__12:
        case SvgPathParser.T__13:
            this.enterOuterAlt(localctx, 6);
            this.state = 144;
            this.smoothCurveto();
            break;
        case SvgPathParser.T__14:
        case SvgPathParser.T__15:
            this.enterOuterAlt(localctx, 7);
            this.state = 145;
            this.quadraticBezierCurveto();
            break;
        case SvgPathParser.T__16:
        case SvgPathParser.T__17:
            this.enterOuterAlt(localctx, 8);
            this.state = 146;
            this.smoothQuadraticBezierCurveto();
            break;
        case SvgPathParser.T__18:
        case SvgPathParser.T__19:
            this.enterOuterAlt(localctx, 9);
            this.state = 147;
            this.ellipticalArc();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MovetoContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SvgPathParser.RULE_moveto;
    return this;
}

MovetoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MovetoContext.prototype.constructor = MovetoContext;

MovetoContext.prototype.movetoArgumentSequence = function() {
    return this.getTypedRuleContext(MovetoArgumentSequenceContext,0);
};

MovetoContext.prototype.wsp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WspContext);
    } else {
        return this.getTypedRuleContext(WspContext,i);
    }
};

MovetoContext.prototype.enterRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.enterMoveto(this);
	}
};

MovetoContext.prototype.exitRule = function(listener) {
    if(listener instanceof SvgPathListener ) {
        listener.exitMoveto(this);
	}
};

MovetoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof SvgPathVisitor ) {
        return visitor.visitMoveto(this);
    } else {
        return visitor.visitChildren(this);
    }
};




SvgPathParser.MovetoContext = MovetoContext;

SvgPathParser.prototype.moveto = function() {

    var localctx = new MovetoContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, SvgPathParser.RULE_moveto);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 150;
        _la = this._input.LA(1);
        if(!(_la===SvgPathParser.T__0 || _la===SvgPathParser.T__1)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 154;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (SvgPathParser.T__36 - 37)) | (1 << (SvgPathParser.T__37 - 37)) | (1 << (SvgPathParser.T__38 - 37)) | (1 << (SvgPathParser.T__39 - 37)))) !== 0)) {
            this.state = 151;
            this.wsp();
            this.state = 156;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 157;
        this.movetoArgumentSequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

